[gd_scene load_steps=7 format=3 uid="uid://bqt17yadoo1ul"]

[ext_resource type="Script" uid="uid://r77jbpfwandu" path="res://scripts/item_pickup.gd" id="1_xy8st"]
[ext_resource type="Texture2D" uid="uid://cnfboe4d0p2wo" path="res://assets/sprites/npc/arrow.png" id="2_xy8st"]

[sub_resource type="Animation" id="Animation_xy8st"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x45a5"]
resource_name = "default"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.56667, 2.96667),
"transitions": PackedFloat32Array(0.420448, 1, 2.37841),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, -20), Vector2(0, 20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rve7m"]
_data = {
&"RESET": SubResource("Animation_xy8st"),
&"default": SubResource("Animation_x45a5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o03ew"]
radius = 106.667

[node name="ItemPickup" type="Node2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_xy8st")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PickupSprite")
libraries = {
&"": SubResource("AnimationLibrary_rve7m")
}

[node name="PickupSprite" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_o03ew")

[node name="Arrow" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -163.333)
scale = Vector2(7, 7)
texture = ExtResource("2_xy8st")

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
